# huapiai

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  alembic.ini  config.yaml.example  pyproject.toml
.github/workflows/: docker-tag.yml  pr_review.yml  project_check.yml  quality-gate.yml  run-tests.yml  stale.yml
data/media/: .gitignore
data/web/: index.html
data/web/assets/: BlockTypesView-CXh6FZki.js  DashboardView-Bvg_TlTa.js  DashboardView-CnExHDHg.css  DispatchRulesView-DcFUGo2Z.js  IMAdaptersView-CJ8BgwkU.js  IMView-CPpzU4dB.css  (+28 more)
docker/: monitoring-compose.yaml  prometheus.yml  start.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.base.json  vite.config.ts
frontend/src/: App.vue
huapir/: __main__.py  entry.py  logger.py
huapir/alembic/: env.py
huapir/app/: __init__.py  bootstrap.py  lifecycle.py
huapir/config/: __init__.py  config_loader.py  global_config.py
huapir/database/: __init__.py  manager.py
huapir/events/: event_bus.py  im.py  listen.py  llm.py  plugin.py  workflow.py
huapir/im/: __init__.py  adapter.py  im_registry.py  manager.py  message.py  profile.py  sender.py
huapir/ioc/: container.py  inject.py
huapir/llm/: adapter.py  llm_manager.py  llm_registry.py  model_types.py
huapir/mcp_module/: __init__.py  manager.py  models.py  server.py
huapir/media/: __init__.py  manager.py  media_object.py  metadata.py
huapir/memory/: entry.py  memory_manager.py  registry.py
huapir/multitenancy/: __init__.py  context.py  models.py  service.py
huapir/observability/: __init__.py  metrics.py
huapir/plugin_manager/: models.py  plugin.py  plugin_event_bus.py  plugin_loader.py  utils.py
huapir/tracing/: __init__.py  core.py  decorator.py  llm_tracer.py  manager.py  models.py
huapir/web/: app.py  utils.py
(+175 files in other folders)
